twitter-bootstrap responsive test

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -3,5 +3,17 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+/* HOME */
+.slideshow {
+  background-color: grey;
+  height: 200px;
+  //float: left;
+}
 
+.social-media {
+  background-color: grey;
+  height: 250px;
+  //float:right;
+
+}
 
