twitter-bootstrap responsive test 2

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,10 +10,15 @@
           <a class="brand" href="#">EvryGameCity</a>
           <div class="container nav-collapse">
             <ul class="nav">
+              <%= menu_divider %>
               <li><%= link_to "Partenaires", "/path1"  %></li>
+              <%= menu_divider %>
               <li><%= link_to "Informations", "/path2"  %></li>
+              <%= menu_divider %>
               <li><%= link_to "Jeux", "/path3"  %></li>
+              <%= menu_divider %>
               <li><%= link_to "Contacts", "/path3"  %></li>
+              <%= menu_divider %>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
