--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -5,8 +5,8 @@
 .navbar-fixed-top {
   background-color: black;
   color: white;
-  height: 40px;
-  min-height: initial;
+  //height: 40px;
+  //min-height: initial;
 }
 
 body {
@@ -16,5 +16,5 @@ body {
 .container {
   //margin-left: auto;
   //margin-right: auto;
-  width: 940px;
+  //width: 940px;
 }
