responsive mosaique ok

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -3,8 +3,8 @@
 /* HEADER */
 
 .navbar-fixed-top {
-  background-color: black;
-  color: white;
+  //background-color: black;
+  //color: white;
   //height: 40px;
   //min-height: initial;
 }
@@ -16,7 +16,7 @@ body {
 .container {
   //margin-left: auto;
   //margin-right: auto;
-  //width: 940px;
+  max-width: 970px;
 }
 
 
