--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,34 @@
-<h1>StaticPages#home</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec tellus condimentum, commodo arcu eget, iaculis turpis. Nullam fermentum, augue sit amet consequat placerat, orci enim interdum magna, id pulvinar arcu enim quis dolor. Cras quis efficitur turpis, eu blandit lorem. Vestibulum ex neque, sollicitudin nec mollis sit amet, aliquet nec dolor. Sed ut ex eget arcu porta mollis. Sed sagittis augue sed est cursus, ut ornare est aliquam. Ut in justo quis turpis varius aliquam. Nam id velit eu urna accumsan sollicitudin. Sed vitae est vel nunc mollis egestas. Proin tempor faucibus tempus.
 
-In hac habitasse platea dictumst. Sed auctor, eros vitae aliquam pretium, odio ex posuere orci, ut commodo massa libero id arcu. Sed lectus nisi, luctus non est non, pharetra gravida ante. Sed at scelerisque turpis. Nam non tempor ligula. Vestibulum enim lectus, vestibulum a diam vehicula, placerat feugiat neque. Ut auctor nisl eget blandit commodo. Maecenas blandit mi libero, sit amet finibus ipsum convallis at. Pellentesque iaculis lectus eleifend, posuere risus a, sagittis nunc. Vestibulum eu gravida diam, eu sagittis lectus. Vivamus fringilla quam non sapien pulvinar blandit. Phasellus egestas enim quam, at tincidunt tellus fringilla eget. Vestibulum ut elit eu risus interdum egestas.
+  <div class="row">
+    <div class="col-md-8" id="left-mosaique">
 
-Cras facilisis sem elit, et semper purus lobortis sed. Vivamus sodales sem ac sem euismod sodales. Duis ultrices cursus mauris, non venenatis neque euismod non. Nulla mollis placerat condimentum. Donec mollis hendrerit eros, in molestie enim scelerisque quis. Pellentesque ut tristique orci, non interdum elit. Quisque facilisis metus eu dolor gravida, ac maximus mauris pretium. Aenean molestie diam at ante ornare, eget accumsan quam molestie. Nulla bibendum finibus tortor vitae consectetur. Phasellus pulvinar neque fermentum diam finibus gravida. Maecenas imperdiet mattis tortor, sed facilisis justo. Duis dignissim ut justo at congue. Aliquam erat volutpat. Ut at condimentum enim, eget tincidunt tortor. Maecenas at porttitor ipsum, eleifend suscipit felis.
+      <div class="row">
+        <div class="col-md-12 mosaique slideshow">
+          slideshow
+        </div>
+      </div>
 
-Vestibulum vestibulum, nulla vitae iaculis molestie, est magna sollicitudin mi, eget tempor purus nulla nec eros. Proin id interdum elit. In in odio volutpat leo tincidunt interdum. Duis fringilla ultricies maximus. Nunc elementum aliquet nisl sit amet varius. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed et dictum est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam congue est a sapien hendrerit, id elementum ipsum bibendum. Donec interdum magna sed risus commodo, in commodo ipsum blandit. Ut rhoncus tellus nec nibh imperdiet, sollicitudin euismod diam commodo. Etiam elementum, risus maximus consequat porta, diam nisi euismod mauris, in lacinia mauris nulla in mi. Aliquam orci turpis, gravida nec consectetur sit amet, placerat ac arcu. Praesent sed ligula sit amet eros interdum vulputate ac at tortor.
+      <div class="row">
+        <div class="col-md-6 mosaique jeu csgo">
+          CS:GO
+        </div>
+        <div class="col-md-6 mosaique jeu lol">
+          LoL
+        </div>
+        <div class="col-md-6 mosaique jeu starcraft2">
+          Starcraft 2
+        </div>
+        <div class="col-md-6 mosaique jeu hearthstone">
+          Hearthstone
+        </div>
+      </div>
+    </div><!-- col-md-8 left-mosaique -->
 
-Ut sit amet euismod enim. Integer tempor libero sed dolor congue, a eleifend eros blandit. Sed pretium quam ac lacus mattis, at mollis orci tincidunt. Aenean nec ligula aliquet, commodo nibh eget, accumsan mauris. Nullam et imperdiet leo, in tincidunt felis. Mauris commodo orci lectus, at luctus diam laoreet at. Vestibulum feugiat hendrerit dolor. Suspendisse potenti.</p>
+    <div class="col-md-4" id="right-mosaique">
+      social media
+    </div><!-- col-md-4 right-mosaique -->
+
+  </div>
+
+
+
