--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -2,6 +2,29 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#left-mosaique {
+  #background-color: grey;
+  height: 200px;
+}
+
+#right-mosaique {
+  background-color: grey;
+  height: 200px;
+}
+
+.mosaique {
+  background-color: blue;
+  color:white;
+}
 
 
+.slideshow {
+  height:300px;
+  background-color: #303030;
+}
+.jeu {
+  height: 250px;
+  //max-width: 350px;
+  background-color: #404040;
+}
 
