--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -25,7 +25,25 @@
     </div><!-- col-md-8 left-mosaique -->
 
     <div class="col-md-4" id="right-mosaique">
-      social media
+      
+      <div class="row">
+        <div class="col-md-12 mosaique billeterie">
+          Billeterie
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12 mosaique twitter">
+          Tweet feed
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12 mosaique instagram">
+          Instagram feed #EGC
+        </div>
+      </div>
+
     </div><!-- col-md-4 right-mosaique -->
 
   </div>
