--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,21 +1,13 @@
 @import "bootstrap";
 
-/* HEADER */
+$body-margin: 60px;
 
-.navbar-fixed-top {
-  //background-color: black;
-  //color: white;
-  //height: 40px;
-  //min-height: initial;
-}
 
 body {
-  margin-top: 60px;
+  margin-top: $body-margin;
 }
 
 .container {
-  //margin-left: auto;
-  //margin-right: auto;
   max-width: 970px;
 }
 
