rajout de mosaique sur home

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -11,4 +11,11 @@ body {
   max-width: 970px;
 }
 
+footer {
+  .container {
+    margin-top: 10px;
+    border-top: 1px solid #eaeaea;
+    color: #707070;
+  }
+}
 
