--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -49,4 +49,15 @@
   </div>
 
 
+  <div class="row">
+    <div class="col-md-12 mosaique infos">
+      Infos pratiques
+    </div>
+  </div>
 
+
+  <div class="row">
+    <div class="col-md-12 mosaique partenaires">
+      Partenaires
+    </div>
+  </div>
