--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,15 +18,26 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
         <li><a href="/partenaires">Partenaires</a></li>
-        <li><a href="/informations">Informations</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                      role="button" aria-expanded="false">
+            Informations<span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to t(:infolan), informations_path(anchor: :infolan) %></li>
+            <li><%= link_to t(:infolieu), informations_path(anchor: :infolieu) %></li>
+            <li><%= link_to t(:infodate), informations_path(anchor: :infodate) %></li>
+            <li><%= link_to t(:infomoyen), informations_path(anchor: :infomoyen) %></li>
+          </ul>
+        </li>
         <li><a href="/contacts">Contacts</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Jeux<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><%= link_to t(:csgo), jeux_path(anchor: :csgo) %></li>
-            <li><%= link_to t(:lol), jeux_path(anchor: :lol) %></li>
-            <li><%= link_to t(:sc2), jeux_path(anchor: :sc2) %></li>
-            <li><%= link_to t(:hs), jeux_path(anchor: :hs) %></li>
+            <li><%= link_to t(:csgo), csgo_path %></li>
+            <li><%= link_to t(:lol), lol_path %></li>
+            <li><%= link_to t(:sc2), sc2_path %></li>
+            <li><%= link_to t(:hs), hs_path %></li>
             <!--li class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li class="divider"></li>
