reconstruction des pages de jeu

--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'static_pages/jeux/jeu_title', locals: {gametag: :sc2} %>
+<%= render partial: 'jeux/jeu_title', locals: {gametag: :csgo} %>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam volutpat dolor sit amet diam fringilla, nec facilisis neque faucibus. Ut rutrum porttitor ligula quis mollis. Donec nibh nunc, consequat viverra sem in, tincidunt ultrices diam. Maecenas finibus mattis iaculis. Nam tortor ante, commodo non nisl sit amet, ultrices convallis eros. Donec faucibus odio gravida libero accumsan laoreet. Integer elementum scelerisque nisi, ut vestibulum felis ultricies et. Ut dapibus lacus est, vel sodales lacus tincidunt eu. Sed tempus feugiat ante. Sed semper, neque vel vehicula aliquet, tellus ante accumsan ipsum, vestibulum fermentum ante nisi sed massa. Pellentesque tempus dolor vitae suscipit pharetra.
 
