--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,10 +34,10 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Jeux<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><%= link_to t(:csgo), csgo_path %></li>
-            <li><%= link_to t(:lol), lol_path %></li>
-            <li><%= link_to t(:sc2), sc2_path %></li>
-            <li><%= link_to t(:hs), hs_path %></li>
+            <li><%= link_to t(:csgo), jeux_csgo_path %></li>
+            <li><%= link_to t(:lol), jeux_lol_path %></li>
+            <li><%= link_to t(:sc2), jeux_sc2_path %></li>
+            <li><%= link_to t(:hs), jeux_hs_path %></li>
             <!--li class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li class="divider"></li>
