--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,9 +16,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
-        <li><a href="/partenaires">Partenaires</a></li>
-        <li class="dropdown">
+        <li class="<%= set_active("home")%>"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+        <li class="dropdown <%= set_active("informations") %>" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                       role="button" aria-expanded="false">
             Informations<span class="caret"></span>
@@ -30,8 +29,7 @@
             <li><%= link_to t(:infomoyen), informations_path(anchor: :infomoyen) %></li>
           </ul>
         </li>
-        <li><a href="/contacts">Contacts</a></li>
-        <li class="dropdown">
+        <li class="dropdown <%= set_active("jeux") %>">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Jeux<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to t(:csgo), jeux_csgo_path %></li>
@@ -44,6 +42,8 @@
             <li><a href="#">One more separated link</a></li-->
           </ul>
         </li>
+        <li class="<%= set_active("partenaires")%>"><a href="/partenaires">Partenaires</a></li>
+        <li class="<%= set_active("contacts")%>"><a href="/contacts">Contacts</a></li>
       </ul>
       <!--form class="navbar-form navbar-left" role="search">
         <div class="form-group">
