--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="<%= set_active("home")%>"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+        <li class="<%= set_active("home")%>"><a href="/">Home</a></li>
         <li class="dropdown <%= set_active("informations") %>" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                       role="button" aria-expanded="false">
@@ -30,7 +30,10 @@
           </ul>
         </li>
         <li class="dropdown <%= set_active("jeux") %>">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Jeux<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                     role="button" aria-expanded="false">
+            Jeux<span class="caret"></span>
+          </a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to t(:csgo), jeux_csgo_path %></li>
             <li><%= link_to t(:lol), jeux_lol_path %></li>
@@ -42,8 +45,17 @@
             <li><a href="#">One more separated link</a></li-->
           </ul>
         </li>
+        <li class="dropdown <%= set_active("contacts") %>" >
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                      role="button" aria-expanded="false">
+            Contacts<span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to t(:egc), contact_egc_path %></li>
+            <li><%= link_to t(:egs), contact_egs_path %></li>
+          </ul>
+        </li>
         <li class="<%= set_active("partenaires")%>"><a href="/partenaires">Partenaires</a></li>
-        <li class="<%= set_active("contacts")%>"><a href="/contacts">Contacts</a></li>
       </ul>
       <!--form class="navbar-form navbar-left" role="search">
         <div class="form-group">
