carousel + twitter test

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
 
       <div class="row">
         <div class="col-md-12 mosaique slideshow">
-          slideshow
+          <%= render partial: 'static_pages/carousel' %>
         </div>
       </div>
 
@@ -34,7 +34,8 @@
 
       <div class="row">
         <div class="col-md-12 mosaique twitter">
-          Tweet feed
+          <a class="twitter-timeline" href="https://twitter.com/JeSuisUneFouger" data-widget-id="541279807129276418">Tweets de @JeSuisUneFouger</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
       </div>
 
