instagram widget test

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,16 @@
+  <div class="row">
+    <div class="col-md-12 mosaique" id="banniere">
+      banniere
+    </div>
+  </div>
+
 
   <div class="row">
     <div class="col-md-8" id="left-mosaique">
 
       <div class="row">
         <div class="col-md-12 mosaique slideshow">
+          Slideshow
           <%= render partial: 'static_pages/carousel' %>
         </div>
       </div>
@@ -35,13 +42,15 @@
       <div class="row">
         <div class="col-md-12 mosaique twitter">
           <a class="twitter-timeline" href="https://twitter.com/JeSuisUneFouger" data-widget-id="541279807129276418">Tweets de @JeSuisUneFouger</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-12 mosaique instagram">
           Instagram feed #EGC
+          <!-- www.intagme.com -->
+<iframe src="http://www.intagme.com/in/?h=ZWdjfHNsfDMwMHwyfDN8fHllc3w1fHVuZGVmaW5lZHx5ZXM=" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:315px; height: 315px" ></iframe>
         </div>
       </div>
 
