--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,7 +45,7 @@
             <li><a href="#">One more separated link</a></li-->
           </ul>
         </li>
-        <li class="dropdown <%= set_active("contacts") %>" >
+        <li class="dropdown <%= set_active("contact_egc") || set_active("contact_egs") %>" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                       role="button" aria-expanded="false">
             Contacts<span class="caret"></span>
