refine jeux + instagram

--- a/app/assets/stylesheets/jeux.css.scss
+++ b/app/assets/stylesheets/jeux.css.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Jeux controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.banniere-game-title {
+  background-color: black;
+  color: white;
+  height: 100px;
+  margin-bottom: 10px;
+}
+
+.content_area {
+  background-color: #808080;
+}
