--- a/app/views/jeux/sc2.html.erb
+++ b/app/views/jeux/sc2.html.erb
@@ -1,5 +1,3 @@
-<%= render partial: 'jeux/jeu_title', locals: {gametag: :sc2} %>
+<%= render partial: 'jeux/jeu', locals: {gametag: :sc2} %>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam volutpat dolor sit amet diam fringilla, nec facilisis neque faucibus. Ut rutrum porttitor ligula quis mollis. Donec nibh nunc, consequat viverra sem in, tincidunt ultrices diam. Maecenas finibus mattis iaculis. Nam tortor ante, commodo non nisl sit amet, ultrices convallis eros. Donec faucibus odio gravida libero accumsan laoreet. Integer elementum scelerisque nisi, ut vestibulum felis ultricies et. Ut dapibus lacus est, vel sodales lacus tincidunt eu. Sed tempus feugiat ante. Sed semper, neque vel vehicula aliquet, tellus ante accumsan ipsum, vestibulum fermentum ante nisi sed massa. Pellentesque tempus dolor vitae suscipit pharetra.
 
-Donec lobortis massa lectus, non egestas elit vestibulum eget. Suspendisse eleifend pharetra sollicitudin. Nam auctor odio sed sapien interdum consequat. Mauris faucibus ex in nisl accumsan cursus. Vivamus condimentum non nulla nec consequat. Aliquam quis varius quam, non semper quam. Morbi velit nisi, egestas at convallis in, facilisis at mauris.</p>
