--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -18,7 +18,7 @@
 }
 
 .mosaique {
-  background-color: blue;
+  //background-color: blue;
   color:white;
 }
 
@@ -29,7 +29,7 @@
 
 .slideshow {
   height:300px;
-  background-color: #303030;
+  //background-color: #303030;
 }
 .jeu {
   height: 250px;
@@ -37,7 +37,7 @@
 }
 .twitter {
   height: 350px;
-  background-color: #505050;
+  //background-color: #505050;
 }
 .instagram {
   height: 350px;
