--- a/app/views/static_pages/_carousel.html.erb
+++ b/app/views/static_pages/_carousel.html.erb
@@ -10,21 +10,21 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="http://placehold.it/1200x315" alt="...">
+      <img src="http://freethinker.co.uk/images/uploads/2009/11/big-banana-620x300.jpg" alt="...">
       <div class="carousel-caption">
-          <h3>Caption Text</h3>
+          <h3>Banane</h3>
       </div>
     </div>
     <div class="item">
-      <img src="http://placehold.it/1200x315" alt="...">
+      <img src="http://freethinker.co.uk/images/uploads/2009/11/big-banana-620x300.jpg" alt="...">
       <div class="carousel-caption">
-          <h3>Caption Text</h3>
+          <h3>Encore banane</h3>
       </div>
     </div>
     <div class="item">
-      <img src="http://placehold.it/1200x315" alt="...">
+      <img src="http://freethinker.co.uk/images/uploads/2009/11/big-banana-620x300.jpg" alt="...">
       <div class="carousel-caption">
-          <h3>Caption Text</h3>
+          <h3>Toujours banane</h3>
       </div>
     </div>
   </div>
