--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
 
       <div class="row">
         <div class="col-md-12 mosaique slideshow">
-          Slideshow
+          <!--Slideshow-->
           <%= render partial: 'static_pages/carousel' %>
         </div>
       </div>
