--- a/app/views/jeux/_jeu.html.erb
+++ b/app/views/jeux/_jeu.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-12 banniere-game-title text-center">
-  <h1><%= t(gametag) %> </h1>
+  <h1><%= t("#{gametag}.name") %> </h1>
 </div>
 
 <%= render partial: 'jeux/jeu_subtitle', locals: { gametag: gametag, categ: :regles} %>
