--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,10 +35,10 @@
             Jeux<span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
-            <li><%= link_to t(:csgo), jeux_csgo_path %></li>
-            <li><%= link_to t(:lol), jeux_lol_path %></li>
-            <li><%= link_to t(:sc2), jeux_sc2_path %></li>
-            <li><%= link_to t(:hs), jeux_hs_path %></li>
+            <li><%= link_to t('csgo.name'), jeux_csgo_path %></li>
+            <li><%= link_to t('lol.name'), jeux_lol_path %></li>
+            <li><%= link_to t('sc2.name'), jeux_sc2_path %></li>
+            <li><%= link_to t('hs.name'), jeux_hs_path %></li>
             <!--li class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li class="divider"></li>
