--- a/app/views/jeux/_jeu.html.erb
+++ b/app/views/jeux/_jeu.html.erb
@@ -2,9 +2,9 @@
   <h1><%= t("#{gametag}.name") %> </h1>
 </div>
 
-<%= render partial: 'jeux/jeu_subtitle', locals: { gametag: gametag, categ: :regles} %>
-<%= render partial: 'jeux/jeu_subtitle', locals: { gametag: gametag, categ: :materiel} %>
-<%= render partial: 'jeux/jeu_subtitle', locals: { gametag: gametag, categ: :recompenses} %>
+<%= render partial: 'jeux/jeu_subsection', locals: { gametag: gametag, categ: :regles} %>
+<%= render partial: 'jeux/jeu_subsection', locals: { gametag: gametag, categ: :materiel} %>
+<%= render partial: 'jeux/jeu_subsection', locals: { gametag: gametag, categ: :recompenses} %>
 <%#= render partial: 'jeux/jeu_subtitle', locals: { gametag: gametag, categ: :inscription} %>
 <%#= render partial: 'jeux/jeu_subtitle', locals: { gametag: gametag, categ: :arbre} %>
 
