--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to t(:egc), root_path, class: "navbar-brand" %>
+      <%= link_to t('egc.name'), root_path, class: "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,8 +51,8 @@
             Contacts<span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
-            <li><%= link_to t(:egc), contact_egc_path %></li>
-            <li><%= link_to t(:egs), contact_egs_path %></li>
+            <li><%= link_to t('egc.name'), contact_egc_path %></li>
+            <li><%= link_to t('egs.name'), contact_egs_path %></li>
           </ul>
         </li>
         <li class="<%= set_active("partenaires")%>"><a href="/partenaires">Partenaires</a></li>
