init du contenu de la catégorie informations

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -1,5 +1,22 @@
 
 <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infolan} %>
+<p><%= t("infolan.text") %></p>
+<p><%= t("infolan.text2") %> </p>
+
 <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infolieu} %>
+<p><%= t("infolieu.text") %></p>
+
 <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infodate} %>
+<p><%= t("infodate.text") %></p>
+
 <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infomoyen} %>
+<h4><%= t("infomoyen.rerd.title") %></h4>
+<p><%= t("infomoyen.rerd.text") %></p>
+<h4><%= t("infomoyen.route.title") %></h4>
+<p><%= t("infomoyen.route.text") %> </p>
+
+
+<%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infoprix} %>
+<p><%= t("infoprix.text") %></p>
+<p><%= t("infoprix.text2") %></p>
+
