--- a/app/views/static_pages/informations/_info_subsection.html.erb
+++ b/app/views/static_pages/informations/_info_subsection.html.erb
@@ -1,6 +1,5 @@
 <div class="anchor">
   <a name="<%= infotag %>"> </a>
 </div>
-<h1 class="info-title" name="<%= infotag %>"><%= t(infotag) %> </h1>
+<h2 class="info-title" name="<%= infotag %>"><%= t("#{infotag}.name") %> </h2>
 
-<p><%= t(:lorem) %></p>
