--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,10 +23,11 @@
             Informations<span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
-            <li><%= link_to t(:infolan), informations_path(anchor: :infolan) %></li>
-            <li><%= link_to t(:infolieu), informations_path(anchor: :infolieu) %></li>
-            <li><%= link_to t(:infodate), informations_path(anchor: :infodate) %></li>
-            <li><%= link_to t(:infomoyen), informations_path(anchor: :infomoyen) %></li>
+            <li><%= link_to t("infolan.name"), informations_path(anchor: :infolan) %></li>
+            <li><%= link_to t("infolieu.name"), informations_path(anchor: :infolieu) %></li>
+            <li><%= link_to t("infodate.name"), informations_path(anchor: :infodate) %></li>
+            <li><%= link_to t("infomoyen.name"), informations_path(anchor: :infomoyen) %></li>
+            <li><%= link_to t("infoprix.name"), informations_path(anchor: :infoprix) %></li>
           </ul>
         </li>
         <li class="dropdown <%= set_active("jeux") %>">
