panel titles + menu parametre par la langue

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -1,3 +1,10 @@
+<div class="panel panel-info">
+  <div class="panel-heading text-center">
+    <h1><%= t(:infopratiques) %></h1>
+  </div>
+</div>
+
+
 <div class="panel panel-default">
   <div class="panel-heading">
     <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infolan} %>
@@ -8,53 +15,80 @@
   </div>
 </div>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infolieu} %>
+
+<div class="row">
+  <div class="col-md-6">
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infolieu} %>
+      </div>
+      <div class="panel-body">
+        <p><%= t("infolieu.text") %></p>
+      </div>
+    </div>
+
   </div>
-  <div class="panel-body">
-    <p><%= t("infolieu.text") %></p>
+  <div class="col-md-6">
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infodate} %>
+      </div>
+      <div class="panel-body">
+        <p><%= t("infodate.text") %></p>
+      </div>
+    </div>
+
   </div>
 </div>
 
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infodate} %>
+
+<div class="row">
+  <div class="col-md-6">
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infomoyen} %>
+      </div>
+      <div class="panel-body">
+        <h4><%= t("infomoyen.rerd.title") %></h4>
+        <p><%= t("infomoyen.rerd.text") %></p>
+        <h4><%= t("infomoyen.route.title") %></h4>
+        <p><%= t("infomoyen.route.text") %> </p>
+      </div>
+    </div>
+
   </div>
-  <div class="panel-body">
-    <p><%= t("infodate.text") %></p>
+  <div class="col-md-6">
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infoprix} %>
+      </div>
+      <div class="panel-body">
+        <p><%= t("infoprix.text") %></p>
+        <p><%= t("infoprix.text2") %></p>
+      </div>
+    </div>
+
+  </div>
+  <div class="col-md-6">
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infoservice} %>
+      </div>
+      <div class="panel-body">
+        <p><%= t("infoservice.text") %></p>
+      </div>
+    </div>
+
   </div>
 </div>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infomoyen} %>
-  </div>
-  <div class="panel-body">
-    <h4><%= t("infomoyen.rerd.title") %></h4>
-    <p><%= t("infomoyen.rerd.text") %></p>
-    <h4><%= t("infomoyen.route.title") %></h4>
-    <p><%= t("infomoyen.route.text") %> </p>
-  </div>
-</div>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infoprix} %>
-  </div>
-  <div class="panel-body">
-    <p><%= t("infoprix.text") %></p>
-    <p><%= t("infoprix.text2") %></p>
-  </div>
-</div>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infoservice} %>
-  </div>
-  <div class="panel-body">
-    <p><%= t("infoservice.text") %></p>
-  </div>
-</div>
+
 
