--- a/app/views/jeux/_jeu.html.erb
+++ b/app/views/jeux/_jeu.html.erb
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-12 banniere-game-title text-center">
+<div class="panel panel-info">
+  <div class="panel-heading text-center">
     <h1><%= t("#{gametag}.name") %> </h1>
   </div>
 </div>
