--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,11 +16,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="<%= set_active("home")%>"><a href="/">Home</a></li>
+        <li class="<%= set_active("home")%>"><a href="/"><%= t(:home) %></a></li>
         <li class="dropdown <%= set_active("informations") %>" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                       role="button" aria-expanded="false">
-            Informations<span class="caret"></span>
+            <%= t(:informations) %><span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to t("infolan.name"), informations_path(anchor: :infolan), class: "anchor-link" %></li>
@@ -34,7 +34,7 @@
         <li class="dropdown <%= set_active("jeux") %>">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                      role="button" aria-expanded="false">
-            Jeux<span class="caret"></span>
+            <%= t(:jeux) %><span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to t('csgo.name'), jeux_csgo_path %></li>
@@ -50,14 +50,14 @@
         <li class="dropdown <%= set_active("contact_egc") || set_active("contact_egs") %>" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                       role="button" aria-expanded="false">
-            Contacts<span class="caret"></span>
+            <%= t(:contact) %><span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to t('egc.name'), contact_egc_path %></li>
             <li><%= link_to t('egs.name'), contact_egs_path %></li>
           </ul>
         </li>
-        <li class="<%= set_active("partenaires")%>"><a href="/partenaires">Partenaires</a></li>
+        <li class="<%= set_active("partenaires")%>"><a href="/partenaires"><%= t(:partenaires) %></a></li>
       </ul>
       <!--form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -66,7 +66,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form-->
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Login</a></li>
+        <li><a href="#"><%= t(:login) %></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
