--- a/app/views/static_pages/contacts/_contact.html.erb
+++ b/app/views/static_pages/contacts/_contact.html.erb
@@ -1,4 +1,46 @@
 
-<h1 class="info-title"><%= t("#{contacttag}.name") %> </h1>
+<div class="panel panel-info">
+  <div class="panel-heading text-center">
+    <h1 class="contact-title"><%= t("#{contacttag}.name") %> </h1>
+  </div>
+</div>
 
-<p><%= t("#{contacttag}.presentation")%> </p>
+
+<div class="panel panel-default">
+
+  <div class="panel-heading">
+    <h1 class="contact-presentation-title"><%= t(:presentation) %></h1>
+  </div>
+ 
+  <div class="panel-body">
+    <p><%= t("#{contacttag}.presentation")%> </p>
+  </div>
+
+</div>
+
+
+<div class="panel panel-default">
+
+  <div class="panel-heading">
+    <h1 class="contact-lequipe-title"><%= t(:lequipe) %></h1>
+  </div>
+ 
+  <div class="panel-body">
+    <p><%= t("#{contacttag}.membre1") %></p>
+    <p><%= t("#{contacttag}.membre2") %></p>
+  </div>
+
+</div>
+
+
+<div class="panel panel-default">
+
+  <div class="panel-heading">
+    <h1 class="contact-contact-title"><%= t(:nouscontacter) %></h1>
+  </div>
+ 
+  <div class="panel-body">
+    <p><%= t("#{contacttag}.contact") %></p>
+  </div>
+
+</div>
