--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -19,39 +19,50 @@
 
 .mosaique {
   //background-color: blue;
-  color:white;
+  //color:white;
+  margin: 0px;
+  padding: 10px;
+  .panel {
+     margin-bottom: 0px;
+   }
 }
 
-#banniere {
+#banniere .panel {
   height: 200px;
-  background-color: #202020;
+  //background-color: #202020;
 }
 
 .slideshow {
-  height:300px;
+  //height:300px;
   //background-color: #303030;
 }
-.jeu {
+.jeu .panel {
   height: 250px;
-  background-color: #404040;
+  //background-color: #404040;
 }
 .twitter {
-  height: 350px;
+  //height: 350px;
   //background-color: #505050;
+  * {
+    margin: 0px;
+  }
 }
-.instagram {
+.instagram .panel {
   height: 350px;
-  background-color: #606060;
+  //background-color: #606060;
+  .panel-body {
+    padding: 0px;
+  }
 }
-.billeterie {
+.billeterie .panel {
   height: 100px;
-  background-color: #707070;
+  //background-color: #707070;
 }
-.infos {
+.infos .panel {
   height: 200px;
-  background-color: #707070;
+  //background-color: #707070;
 }
-.partenaires {
-  height: 200px;
-  background-color: #606060;
+.partenaires .panel {
+  height: 150px;
+  //background-color: #606060;
 }
