--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -5,21 +5,26 @@
 </div>
 
 
-<div class="panel panel-default">
+<div class="panel panel-default"> <!-- Info lan -->
   <div class="panel-heading">
     <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infolan} %>
   </div>
-  <div class="panel-body">
-    <p><%= t("infolan.text") %></p>
-    <p><%= t("infolan.text2") %> </p>
+  <div class="panel-body row">
+    <div class="col-md-2">
+      <%= image_tag 'affiche.jpg', width: 135 %>
+    </div>
+    <div class="col-md-10">
+      <p><%= t("infolan.text") %></p>
+      <p><%= t("infolan.text2") %> </p>
+    </div>
   </div>
 </div>
 
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="left-column col-md-4">
 
-    <div class="panel panel-default">
+    <div class="panel panel-default"><!-- Où ? -->
       <div class="panel-heading">
         <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infolieu} %>
       </div>
@@ -28,27 +33,7 @@
       </div>
     </div>
 
-  </div>
-  <div class="col-md-6">
-
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infodate} %>
-      </div>
-      <div class="panel-body">
-        <p><%= t("infodate.text") %></p>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-
-
-<div class="row">
-  <div class="col-md-6">
-
-    <div class="panel panel-default">
+    <div class="panel panel-default"><!-- Comment ? -->
       <div class="panel-heading">
         <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infomoyen} %>
       </div>
@@ -60,10 +45,38 @@
       </div>
     </div>
 
+  </div><!-- left column-->
+
+
+  <div class="col-md-8">
+
+    <div class="panel panel-default"><!-- Plan -->
+      <iframe width="600" height="550" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Ar%C3%A8nes%20de%20l'Agora%2C%2091000%20%C3%89vry&key=AIzaSyCj5JRiau8OMBTI8Hi6Cysv7Zcdrl0Kb_I"></iframe>
+    </div>
+
+  </div>
+
+</div>
+
+
+
+<div class="row">
+
+  <div class="col-md-6">
+
+    <div class="panel panel-default"><!-- Quand ? -->
+      <div class="panel-heading">
+        <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infodate} %>
+      </div>
+      <div class="panel-body">
+        <p><%= t("infodate.text") %></p>
+      </div>
+    </div>
+
   </div>
   <div class="col-md-6">
 
-    <div class="panel panel-default">
+    <div class="panel panel-default"><!-- Combien ? -->
       <div class="panel-heading">
         <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infoprix} %>
       </div>
@@ -74,9 +87,9 @@
     </div>
 
   </div>
-  <div class="col-md-6">
+  <div class="col-md-12">
 
-    <div class="panel panel-default">
+    <div class="panel panel-default"><!-- Services -->
       <div class="panel-heading">
         <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infoservice} %>
       </div>
