--- a/app/views/jeux/_jeu.html.erb
+++ b/app/views/jeux/_jeu.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-info">
   <div class="panel-heading text-center">
-    <h1><%= t("#{gametag}.name") %> </h1>
+    <h1>Bannière <%= t("#{gametag}.name") %> </h1>
   </div>
 </div>
 
