--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -58,6 +58,7 @@
           </ul>
         </li>
         <li class="<%= set_active("partenaires")%>"><a href="/partenaires"><%= t(:partenaires) %></a></li>
+        <li class="<%= set_active("reglement")%>"><a href="/reglement"><%= t(:reglement) %></a></li>
       </ul>
       <!--form class="navbar-form navbar-left" role="search">
         <div class="form-group">
